整合android版微信分享网页,图片,小程序功能

--- a/android/build.gradle
+++ b/android/build.gradle
@@ -17,5 +17,6 @@ android {
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     compile 'com.facebook.react:react-native:+'
+    provided 'com.tencent.mm.opensdk:wechat-sdk-android-with-mta:+'
 }
 
