--- a/package.json
+++ b/package.json
@@ -18,6 +18,10 @@
     "TFShare",
     "react-native"
   ],
+  "dependencies": {
+    "buffer": "^5.0.6",
+    "react-native": "^0.43.4"
+  },
   "devDependencies": {
     "babel-eslint": "^7.2.3",
     "eslint": "^3.19.0",
