--- a/android/build.gradle
+++ b/android/build.gradle
@@ -17,6 +17,6 @@ android {
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     compile 'com.facebook.react:react-native:+'
-    provided 'com.tencent.mm.opensdk:wechat-sdk-android-with-mta:+'
+    provided 'com.tencent.mm.opensdk:wechat-sdk-android-without-mta:0.0.8'
 }
 
