--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
   ],
   "peerDependencies": {
     "buffer": "^5.0.6",
-    "react-native": "^0.47.1"
+    "react-native": ">= 0.47.1"
   },
   "devDependencies": {
     "babel-eslint": "^7.2.3",
